@@ -1,3 +1,4 @@
+	* fixed sparse file detection on windows
 	* fixed bug in gunzip
 	* fix to use proxy settings when adding .torrent file from URL
 	* fix resume file issue related to daylight savings time on windows
